--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -13,7 +13,7 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Grid x:Name="toolBar" Style="{StaticResource ToolBar}">
+            <Grid x:Name="toolBar" Style="{StaticResource ToolBar}" DataContext="{Binding ToolBar}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -25,16 +25,16 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Button Grid.Row="0" Grid.Column="0">
-                    <Image Name="line" Source="./Resources/Icons/line.png"  Style="{StaticResource ToolIcon}"></Image>
+                <Button Grid.Row="0" Grid.Column="0" Command="{Binding Path=SetDrawLineCommand}">
+                    <Image Name="line" Source="./Resources/Icons/line.png"  Style="{StaticResource ToolIcon}"></Image> 
                 </Button>
-                <Button Grid.Row="0" Grid.Column="1">
+                <Button Grid.Row="0" Grid.Column="1" Command="{Binding Path=SetDrawSquareCommand}">
                     <Image Name="square" Source="./Resources/Icons/square.png" Style="{StaticResource ToolIcon}"></Image>
                 </Button>
                 
             </Grid>
             <Grid x:Name="drawingArea" Grid.Column="1">
-                <local:OpenGLRender></local:OpenGLRender>
+                <local:OpenGLRender ></local:OpenGLRender>
             </Grid>
         </Grid>
     </Grid>
