--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WPF"
         mc:Ignorable="d"
         xmlns:oglc="clr-namespace:WPFOpenGLLib;assembly=OpenGLManagedCpp"
+        xmlns:se ="clr-namespace:SimpleEngineControls;assembly=SimpleEngineControls"
         Title="WPF - OpenGl InterOp" Height="350" Width="525">
     <Grid>
         <Grid x:Name="panel" Style="{StaticResource Panel}">
