--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         xmlns:oglc="clr-namespace:WPFOpenGLLib;assembly=OpenGLManagedCpp"
         xmlns:se ="clr-namespace:SimpleEngineControls;assembly=SimpleEngineControls"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="WPF - OpenGl InterOp" Height="350" Width="525">
     <Grid>
         <Grid x:Name="panel" Style="{StaticResource Panel}">
@@ -32,6 +33,7 @@
                 <Button Grid.Row="0" Grid.Column="1" Command="{Binding Path=SetDrawSquareCommand}">
                     <Image Name="square" Source="./Resources/Icons/square.png" Style="{StaticResource ToolIcon}"></Image>
                 </Button>
+                <xctk:ColorPicker Name="Picker" Grid.Row="1" Grid.Column="0"  Style="{StaticResource ToolIcon}" SelectedColor="{Binding Color}"></xctk:ColorPicker>
                 
             </Grid>
             <Grid x:Name="drawingArea" Grid.Column="1">
