--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -107,6 +107,13 @@
                                                             <Image Name="add" Source="./Resources/Icons/add.png"  Style="{StaticResource ToolIcon}" />
 
                                                         </Button>
+                                                        <Button  
+                                                            Command="{Binding DataContext.DeleteSelectedTile, 
+                                                            RelativeSource={RelativeSource Mode=FindAncestor,  AncestorType={x:Type local:MainWindow}}}"
+                                                            CommandParameter="{Binding }" >
+                                                            <Image Name="delete" Source="./Resources/Icons/delete.png"  Style="{StaticResource ToolIcon}" />
+
+                                                        </Button>
                                                     </StackPanel>
                                                 
                                             </DataTemplate>
