+Normalized zoom range

--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -188,7 +188,7 @@
                 <DockPanel DockPanel.Dock="Right" LastChildFill="True">
                     <Label Content="Zoom" DockPanel.Dock="Left"></Label>
                     <TextBox Text="{Binding ElementName=zoomSlider, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" TextAlignment="Right" Width="40" />
-                    <Slider Value="{Binding ZoomLevel}"  Minimum="0" Maximum="{Binding MaxZoomLevel}" TickPlacement="BottomRight" TickFrequency="5" IsSnapToTickEnabled="False" Name="zoomSlider"/>
+                    <Slider Value="{Binding ZoomLevel}"  Minimum="0" Maximum="100" TickPlacement="BottomRight" TickFrequency="5" IsSnapToTickEnabled="False" Name="zoomSlider"/>
                 </DockPanel>
             </DockPanel>
         </Grid>
